tests/chapter_15/invalid_types/zero_scalar_init_static_array.c
int main(void)
{
    static int arr[1] = 0;
    return arr[0];
}